2006-11-07 Max Derhak
  * Added support for optional multiProcessingElementType tags.  These tags provide
    an arbitrary order of curves, matricies, and N-D luts encoded using floating
	point.  The CIccTagMultiProcessElement class implements these objects.  MPE based tags
	can have 1 or more CIccMultiProcessElement based objects attached to them.
	See CIccMpeCurveSet, CIccMpeMatrix, CIccMpeCLUT for more details.  Additional future
	placeholder elements CIccMpeBAcs and CIccMpeEAcs objects are defined, but provide no
	processing capabilities. See additions to Icc Specification for more details
	releated to optional MPE based tags.  
  * Added CmdLine tool IccV4ToMPE that allows one to populate MPE based tags based upon
    contents of LutAtoB and LutBtoA based tags.
	
2006-10-30 Max Derhak
  * Added direct accessors CIccTagMultiLocalizedUnicode::Find() and 
    CIccTagMultiLocalizedUnicode::SetText() for easier creation of 
	multiLocalizedUnicode based tags
	
2006-10-27 Max Derhak
  * Added CIccTagCurve::SetGamma member function
  * Added validation check for single entry (gamma) curves to CIccTagLut8
    and CIccTagLut16

2006-10-10 Rohit Patil
  * Added IsIdentity() function to the CIccCurve and CIccMatrix classes which returns true
    if they are identity
  * Modified the Xform objects in the CMM to use the IsIdentity() function. 
    Now CIccXform::Apply() will not apply the curves or the matrix if 
    they are identity, to improve the CMM performance

2006-10-06 Max Derhak
  * Added CmdLine tool iccStripUnkownTags to remove tags not defined
    in the Icc Specification from a profile.

2006-07-31  Max Derhak
  * Fixed bug in CIccTagChromaticity::Validate() to make comparisons
	  with fixed floating point encoding rather than IEEE encoding

2006-07-13  Max Derhak
  * Fixed bug with displaying icSigPerceptualRenderingIntentGamutTag
    tag's name correctly
  * Added icVectorApplyMatrix3x3() to IccUtil

2006-06-09  Max Derhak